# archonos-next

./: .gitignore  Dockerfile  README.md  mobile.html  mock-ui-linear.html  mock-ui-voltagent.html  mock-ui.html  pyproject.toml  server.py  wiki.py
.github/workflows/: test.yml
docs/: BASE_PLAN.md  HERMES_SOUL.md  HERMES_SYSTEM_PROMPT.md  PRODUCT_SPEC.md
docs/architecture/: CLI_KERNEL_SPEC.md  CORE_ARCHITECTURE.md  DASHBOARD_SPEC.md  STORAGE_ARCHITECTURE.md
docs/architecture/decisions/: 003-kernel-clean-push-state.md
docs/founding/: CODEX_HANDOFF.md  CORE_DIRECTIVE.md  FOUNDING_REPORT.md  NORTH_STAR.md  PRD.md  ROADMAP.md  VISION.md
docs/onboarding/: FIRST_RUN.md  QUICKSTART.md  WINDOWS_WSL2.md
docs/product/: ALPHA_SCOPE.md  BUILD_SCHEDULE.md  PRODUCT_PLAN.md
kb/: resources.json  sources.json
kb/diagrams/: infographics.md  ultrasound-diagrams.md
knowledge-packs/sonography/: README.md
src/archonos/: __init__.py  scheduler.py  scheduler_cli.py
src/archonos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/archonos/cli/: __init__.py  main.py
src/archonos/config/: __init__.py  settings.py
src/archonos/core/: __init__.py  constants.py  ops.py
src/archonos/ingest/: media.py
src/archonos/knowledge/: __init__.py  ask.py  chunk.py  import_.py  ingest.py  search.py
src/archonos/llm/: __init__.py  cli.py  providers.py
src/archonos/memory/: __init__.py  ops.py  store.py
src/archonos/server/: main.py
src/archonos/storage/: __init__.py  db.py  sqlite.py
src/archonos/workflows/: __init__.py  engine.py  ops.py  registry.py  runner.py  (+1 more)
tests/: test_cli.py  test_e2e_alpha.py  test_gate_m1.py  test_gate_m2.py  test_gate_m3.py  test_gate_m4.py  test_gate_m5.py  test_gate_m6.py  test_huggingface_source.py  test_sources.py  test_storage.py  test_tier2.py
ui/sonography/: index.html
(+18 files in other folders)
