[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "archonos"
version = "0.1.0"
description = "Local-first AI operating layer for knowledge, memory, workflows, and continuity."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ArchonOS Next" }
]
dependencies = []

[project.scripts]
archonos = "archonos.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/archonos"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
